# overkill-be

./: .dockerignore  .env.example  .gitignore  CLAUDE.local.example.md  CLAUDE.md  Dockerfile  Dockerfile.local  README.md  alembic-quick-setup-readme.md  alembic.ini  app.py  build.sh  config.py  docker-compose.yaml  docker-implementation-pattern.md  enter-container.sh  entrypoint.local.sh  entrypoint.sh  exception_handlers.py  logging_config.py  main.py  pyproject.toml  railway-setup.readme.md  railway.json  ruff.toml  start.sh  stop.sh
.claude/prompts/: readme.txt  scraper.txt
.github/: prompt-budget.yaml
.github/scripts/: check_prompt_budget.py
.github/workflows/: manage_superuser_cli.yaml  prompt-token-budget.yaml  pytest.yaml  ruff.yaml
alembic/: env.py
alembic/versions/: 11f48c011551_first_migration.py  3c980ae72977_first_migration.py  88a92396e2bd_nullable_name.py  b85572682eb2_first_migration.py
api/: router_handler.py
api/v1/: router.py
api/v1/auth/: schemas.py  views.py
api/v1/schemas/supabase/: auth_schemas.py
api/v1/user/: schemas.py  views.py
api/v1/views/: auth_views.py
api/v1/views/supabase/: auth_views.py
auth/: models.py  security.py  service.py
db/: database.py
db/alembic_models/: __init__.py
db/seeders/: role_seeder.py  seeder.py
docs/: railway-setup.md
infra/gcp/: README.md  apis.tf  artifact_registry.tf  terraform.tfvars  variables.tf  versions.tf
role/: constants.py  models.py
supabase_app/: __init__.py
supabase_app/auth/: service.py
tests/: conftest.py
tests/auth/: test_auth_service.py  test_auth_views_v1.py
tests/db/: test_database.py
tests/e2e/: conftest.py  test_auth_and_user_flows.py
tests/integration/: test_auth_service_integration.py  test_role_seeder_integration.py  test_user_service_integration.py
tests/supabase_app/: test_supabase_app.py
tests/supabase_app/auth/: test_supabase_auth_service.py
tests/user/: test_user_service.py
user/: models.py  service.py
utils/cli/: auth.py  manage_superuser.py  superuser.py
