[project]
name = "overkill-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cyclopts>=4.20.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "poethepoet>=0.46.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.17",
]


[tool.pytest]
minversion = "9.1.1"
addopts = ["-ra", "-q"]
pythonpath = ["."]
testpaths = [
    "tests"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
package = false

[tool.poe]
executor.type = "uv"

# TODO: improve/add CLI --helpers etc
[tool.poe.tasks]
manage-superuser = "-m utils.cli.manage_superuser ${args}"
fresh-seed = "-m db.seeders.seeder"
check-prompt-budget = "python .github/scripts/check_prompt_budget.py ${args}"
